--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "framer-motion": "^12.7.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router": "^7.5.0",
     "tailwindcss": "^4.1.4"
   },
